# OpenGLTemplate

./: .gitignore  CMakeLists.txt  README.md
project/libs/: glad.cpp
project/libs/include/glad/: glad.h
project/source/: main.cpp
project/source/include/: test.h
project/source/shaders/: standard_fragment.glsl  standard_vertex.glsl
